corrected the chosen-jquery patch for tooltip, slightly changed the style of the shade behind the help tooltips

--- a/web/src/main/webapp/public-resources/css/help-tooltip.css
+++ b/web/src/main/webapp/public-resources/css/help-tooltip.css
@@ -6,7 +6,7 @@
     color: #111111;
     border-radius: 8px;
     font: 10px Verdana, Helvetica, Arial, sans-serif;
-    /*box-shadow: 0 0 7px black;*/
+    box-shadow: 0 0 40px gray;
 }
 
 .tooltip-div {
@@ -45,7 +45,7 @@
     top: -20px;
     width: 25px;
     height: 25px;
-    box-shadow: 6px 5px 9px -9px black;
+    box-shadow: 6px 5px 30px -30px black;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
